deploy/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        type: db
    spec:
      containers:
        - name: postgres
          image: efedoseev/postgres:17-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: 1Gi
              cpu: "1"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-persistent-storage
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
        - name: init-script
          configMap:
            name: postgres-init-script
