deploy/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: efedoseev/user-service:latest
          imagePullPolicy: Always # for local deployment
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /configs
              readOnly: true
          livenessProbe:
            httpGet:
              path: /livez
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 1
#            periodSeconds: 1 # default 10
      volumes:
        - name: config
          configMap:
            name: user-service-config
