deploy/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    group: db
spec:
  selector:
    app: postgres
  clusterIP: None
  ports:
    - port: 5432
      targetPort: 5432
