deploy/user-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP # NodePort
  selector:
    app: user-service
  ports:
    - port: 8080
      targetPort: 8080
