deploy/user-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: user-service.dev
      http:
        paths:
          - backend:
              service:
                name: user-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
